--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -10,6 +10,9 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
+- checkout: self
+  persistCredentials: true
+
 - task: Maven@3
   inputs:
     mavenPomFile: 'app/pom.xml'
