--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,9 @@ variables:
   vmImageName: 'ubuntu-latest'
 
 stages:
+- checkout: self
+  persistCredentials: true
+
 - stage: Build
   displayName: Build stage
   jobs:
