test branch main

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,8 +4,10 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
 
 trigger:
-- master
+- main
 
+pr:
+- '*'
 variables:
 
   # Azure Resource Manager connection created during pipeline creation
