--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -4,8 +4,9 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
 
 trigger:
-- master
-
+- main
+pr:
+- '*'
 pool:
   vmImage: 'ubuntu-latest'
 
