--- a/AzurePipelines-CI.yaml
+++ b/AzurePipelines-CI.yaml
@@ -18,7 +18,7 @@ steps:
   condition: succeededOrFailed()
 
 - task: PublishBuildArtifacts@1
-  displayName: 'Publish Artifact: drop'
+  displayName: 'Publish Artifact: drop-test'
   inputs:
     PathtoPublish: '$(build.artifactstagingdirectory)'
   condition: succeededOrFailed()
